--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+      - ci/*
 
 permissions: read-all
 
@@ -17,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !startsWith(github.head_ref, 'dependabot/') && !startsWith(github.ref_name, 'dependabot/') }}
     steps:
+      - name: echo things
+        run: echo "Running SonarQube analysis..."
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  
