--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !startsWith(github.head_ref, 'dependabot/') && !startsWith(github.ref_name, 'dependabot/') }}
     steps:
+      - name: Checkout code
+        run: echo "Running SonarQube analysis..."
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  
