--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,9 +1,6 @@
 name: Pull request CI
 
 on:
-  push:
-    branches:
-      - ci/*
   pull_request:
     branches:
       - main
@@ -21,156 +18,156 @@ jobs:
         with:
           fetch-depth: 0  
       - name: SonarQubeScan
-        uses: SonarSource/sonarqube-scan-action@v4
+        uses: SonarSource/sonarqube-scan-action@fd88b7d7ccbaefd23d8f36f73b59db7a3d246602
         env: 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  # global-install: 
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  global-install: 
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-  #     - name: Install dependencies
-  #       run: npm ci --prefer-offline
+      - name: Install dependencies
+        run: npm ci --prefer-offline
       
-  #     - name: Cache node_modules and Vite cache
-  #       id: cache-packages
-  #       uses: actions/cache/save@v4
-  #       with:
-  #         path: |
-  #           ./node_modules
-  #           ./packages/react/node_modules
-  #           ./packages/react/.vite
-  #           ./packages/angular/node_modules
-  #           ./packages/angular/.vite
-  #           ./packages/core/node_modules
-  #         key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+      - name: Cache node_modules and Vite cache
+        id: cache-packages
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            ./node_modules
+            ./packages/react/node_modules
+            ./packages/react/.vite
+            ./packages/angular/node_modules
+            ./packages/angular/.vite
+            ./packages/core/node_modules
+          key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
-  #     - name: Cache icons
-  #       id: cache-icons
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: |
-  #           ./packages/react/src/components/icon/generated
-  #           ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
-  #         key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+      - name: Cache icons
+        id: cache-icons
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./packages/react/src/components/icon/generated
+            ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
-  #     - name: Generate icons
-  #       run: npm run generate:icons
+      - name: Generate icons
+        run: npm run generate:icons
 
 
-  # quality-react:
-  #   runs-on: ubuntu-latest
-  #   needs: global-install
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  quality-react:
+    runs-on: ubuntu-latest
+    needs: global-install
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-  #     - name: Restore cache node_modules and Vite cache
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: |
-  #           ./node_modules
-  #           ./packages/react/node_modules
-  #           ./packages/react/.vite
-  #           ./packages/angular/node_modules
-  #           ./packages/angular/.vite
-  #           ./packages/core/node_modules
-  #         key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+      - name: Restore cache node_modules and Vite cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./node_modules
+            ./packages/react/node_modules
+            ./packages/react/.vite
+            ./packages/angular/node_modules
+            ./packages/angular/.vite
+            ./packages/core/node_modules
+          key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
         
-  #     - name: Restore cache icons
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: |
-  #           ./packages/react/src/components/icon/generated
-  #           ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
-  #         key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+      - name: Restore cache icons
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./packages/react/src/components/icon/generated
+            ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
-  #     - name: Lint
-  #       working-directory: packages/react
-  #       run: npm run lint
+      - name: Lint
+        working-directory: packages/react
+        run: npm run lint
 
-  #     - name: Run tests
-  #       working-directory: packages/react
-  #       run: npm run test:ci
+      - name: Run tests
+        working-directory: packages/react
+        run: npm run test:ci
 
-  # quality-angular:
-  #   runs-on: ubuntu-latest
-  #   needs: global-install
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  quality-angular:
+    runs-on: ubuntu-latest
+    needs: global-install
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
       
-  #     - name: Restore cache node_modules and Vite cache
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: |
-  #           ./node_modules
-  #           ./packages/react/node_modules
-  #           ./packages/react/.vite
-  #           ./packages/angular/node_modules
-  #           ./packages/angular/.vite
-  #           ./packages/core/node_modules
-  #         key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+      - name: Restore cache node_modules and Vite cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./node_modules
+            ./packages/react/node_modules
+            ./packages/react/.vite
+            ./packages/angular/node_modules
+            ./packages/angular/.vite
+            ./packages/core/node_modules
+          key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
-  #     - name: Restore cache icons
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: |
-  #           ./packages/react/src/components/icon/generated
-  #           ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
-  #         key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+      - name: Restore cache icons
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./packages/react/src/components/icon/generated
+            ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
-  #     - name: Lint
-  #       working-directory: packages/angular
-  #       run: npm run lint
+      - name: Lint
+        working-directory: packages/angular
+        run: npm run lint
 
-  #     - name: Run tests
-  #       working-directory: packages/angular
-  #       run: npm run test:ci
+      - name: Run tests
+        working-directory: packages/angular
+        run: npm run test:ci
 
-  # quality-core:
-  #   runs-on: ubuntu-latest
-  #   needs: global-install
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  quality-core:
+    runs-on: ubuntu-latest
+    needs: global-install
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
       
-  #     - name: Restore cache node_modules and Vite cache
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: |
-  #           ./node_modules
-  #           ./packages/react/node_modules
-  #           ./packages/react/.vite
-  #           ./packages/angular/node_modules
-  #           ./packages/angular/.vite
-  #           ./packages/core/node_modules
-  #         key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
+      - name: Restore cache node_modules and Vite cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./node_modules
+            ./packages/react/node_modules
+            ./packages/react/.vite
+            ./packages/angular/node_modules
+            ./packages/angular/.vite
+            ./packages/core/node_modules
+          key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
-  #     - name: Lint
-  #       working-directory: packages/core
-  #       run: npm run lint
+      - name: Lint
+        working-directory: packages/core
+        run: npm run lint
 
 
